--- a/config/dm/assets.yml
+++ b/config/dm/assets.yml
@@ -5,7 +5,9 @@ js:
     flowPlayer:       lib/flowplayer-3.1.4.min
 
     widgetForm:       widget/form
-    widgetView:       widget/view
+    
+    dmFlowPlayer:     dmFlowPlayer
+    launcher:         launcher
 
 other:
 
